--- a/package.xml
+++ b/package.xml
@@ -65,6 +65,7 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>teleop_twist_keyboard</exec_depend>
+  <exec_depend>tf2</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
