--- a/package.xml
+++ b/package.xml
@@ -52,6 +52,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
@@ -71,6 +72,7 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>segway_description</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
