Hooked path planning to robot
*leader.py
  -- fixed parameter fetching to use private parameters
  -- implemented initial version of path requesting to active goal
  -- implemented initial, naive checks for goal reaching
  -- publishes markers for current path

*frontier_expansion.py
  -- for some reason, find_path() requires the final path to return with row/col backwards in order to match real map..
  -- re-displaying OpenCV image of current map for debugging
  -- fixed package path issues

*path_finder.py
  -- fixed python package path importing

*CMakeLists.txt
  -- fixed generate_messages() dependencies

*simulation.launch
  -- removed segway_control node and instead call leader.py with private params

*sim_viz.rviz
  -- display CurrentPath markers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ add_service_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
+  nav_msgs
 )
 
 ################################################
